--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.ts",
   "scripts": {
     "test": "npm run dev",
-    "start":"nodemon main.ts"
+    "start":"ts-node main.ts"
   },
   "author": "Zakichanu",
   "license": "MIT",
